--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "chart.js": "^4.5.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "googleapis": "^166.0.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.13",
     "next": "16.0.0",
-    "pdfjs-dist": "^5.4.296",
+    "pdfjs-dist": "^5.4.449",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.0",
