Fix build errors: remove swcMinify, layoutEffect, and fix TypeScript errors

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "@react-three/postprocessing": "^3.0.4",
-    "@studio-freight/lenis": "^1.0.42",
     "@types/pdfjs-dist": "^2.10.377",
     "@use-gesture/react": "^10.3.1",
     "chart.js": "^4.5.1",
@@ -21,7 +20,7 @@
     "googleapis": "^166.0.0",
     "gsap": "^3.13.0",
     "lenis": "^1.3.13",
-    "next": "16.0.0",
+    "next": "^16.0.7",
     "pdfjs-dist": "^5.4.449",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
@@ -38,7 +37,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0",
+    "eslint-config-next": "^16.0.7",
     "shadcn": "^3.5.0",
     "tailwindcss": "^4",
     "typescript": "^5"
